4.Kubernetes_introduction.p3/homework_step_by_step/step_14/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-common
spec:
  rules:
  - host: s<номерстудента>.k8s.slurm.io
    http:
      paths:
      - path: /app
        backend:
          serviceName: app
          servicePort: 80
      - path: /sec
        backend:
          serviceName: app-secret
          servicePort: 80
  tls:
  - hosts:
    - s<номерстудента>.k8s.slurm.io
    secretName: certificate
